--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,6 @@ language: go
 
 go: 1.10.x
 
-notifications:
-  webhooks:
-    urls:
-      - https://webhooks.gitter.im/e/3da5256a85d5ff6c1fa4
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: never     # options: [always|never|change] default: always
-
 stages:
 
   # build & test
@@ -46,3 +38,13 @@ jobs:
 
     - stage: deploy (release)
       script: make dist-release
+
+notifications:
+  email:
+    - andre.markwalder@gmail.com
+  webhooks:
+    urls:
+      - https://webhooks.gitter.im/e/3da5256a85d5ff6c1fa4
+    on_success: change  # options: [always|never|change] default: always
+    on_failure: always  # options: [always|never|change] default: always
+    on_start: never     # options: [always|never|change] default: always
