--- a/.travis.yml
+++ b/.travis.yml
@@ -2,42 +2,59 @@ language: go
 
 go: 1.10.x
 
-stages:
+script:
+- if [ "${TRAVIS_TAG}" == "" ]; then
+    export VERSION=SNAPSHOT-`git rev-parse --abbrev-ref HEAD`;
+  else
+    export VERSION=${TRAVIS_TAG:1};
+  fi;
+  if [ "${VERSION}" == "HEAD" ]; then
+    export VERSION=SNAPSHOT-`git rev-parse --abbrev-ref HEAD`;
+  fi;
+  export BUILD=`git rev-parse HEAD`;
+  echo ${VERSION} ${BUILD}
+- make build
+- make test
+- make dist
 
-  # build & test
-  - name: build and test (master)
-    if: tag IS blank
-  - name: build and test (release)
-    if: tag IS present
-  
-  # deploy
-  - name: deploy (master)
-    if: tag IS blank
-  - name: deploy (release)
-    if: tag IS present
-
-jobs:
-  include:
-
-    - stage: build and test (master)
-      script:
-      - export VERSION=SNAPSHOT-`git rev-parse --abbrev-ref HEAD`
-      - export BUILD=`git rev-parse HEAD`
-      - make build
-      - make test
-
-    - stage: build and test (release)
-      script:
-      - export VERSION=${TRAVIS_TAG:1}; 
-      - export BUILD=`git rev-parse HEAD`
-      - make build
-      - make test
-
-    - stage: deploy (master)
-      script: make dist-snapshot
-
-    - stage: deploy (release)
-      script: make dist-release
+deploy:
+  provider: releases
+  api_key: $GITHUB_OAUTH_TOKEN
+  file:
+  - dist/docker-volume-glusterfs-${VERSION}-linux_amd64.zip
+  - dist/docker-volume-glusterfs-${VERSION}-linux_amd64.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-linux_386.zip
+  - dist/docker-volume-glusterfs-${VERSION}-linux_386.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-linux_armv5.zip
+  - dist/docker-volume-glusterfs-${VERSION}-linux_armv5.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-linux_armv6.zip
+  - dist/docker-volume-glusterfs-${VERSION}-linux_armv6.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-linux_armv7.zip
+  - dist/docker-volume-glusterfs-${VERSION}-linux_armv7.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-linux_armv8.zip
+  - dist/docker-volume-glusterfs-${VERSION}-linux_armv8.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-darwin_amd64.zip
+  - dist/docker-volume-glusterfs-${VERSION}-darwin_amd64.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-darwin_386.zip
+  - dist/docker-volume-glusterfs-${VERSION}-darwin_386.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_amd64.zip
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_amd64.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_386.zip
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_386.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_armv5.zip
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_armv5.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_armv6.zip
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_armv6.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_armv7.zip
+  - dist/docker-volume-glusterfs-${VERSION}-freebsd_armv7.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-windows_386.zip
+  - dist/docker-volume-glusterfs-${VERSION}-windows_386.tar.gz
+  - dist/docker-volume-glusterfs-${VERSION}-windows_amd64.zip
+  - dist/docker-volume-glusterfs-${VERSION}-windows_amd64.tar.gz
+  skip_cleanup: true
+  overwrite: true
+  on:
+    tags: true
 
 notifications:
   email:
@@ -45,6 +62,6 @@ notifications:
   webhooks:
     urls:
       - https://webhooks.gitter.im/e/273c2a06c952534253d1
-    on_success: change  # options: [always|never|change] default: always
-    on_failure: always  # options: [always|never|change] default: always
-    on_start: never     # options: [always|never|change] default: always
+    on_success: change
+    on_failure: always
+    on_start: never
