--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ go: 1.10.x
 
 before_script:
 - source ./.travis/version-generator.sh
+- source ./.travis/deploy-changelog.sh
 #- source ./.travis/changelog-git-push.sh
 
 script:
@@ -14,8 +15,8 @@ script:
 - make test
 #- make changelog
 - CHANGELOG_BRANCH=$TRAVIS_BRANCH
-- source ./.travis/deploy-changelog.sh
-- make dist
+- deploy-changelog
+#- make dist
 
 deploy:
   provider: releases
