--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ go: 1.10.x
 before_script:
 - source ./.travis/version-generator.sh
 - source ./.travis/deploy-changelog.sh
+- source ./RELEASE
 
 script:
 - make build
