--- a/.travis.yml
+++ b/.travis.yml
@@ -2,30 +2,76 @@ language: go
 
 go: 1.10.x
 
-before_script:
-- source ./.travis/version-generator.sh
-- source ./.travis/deploy-changelog.sh
+env:
+  global:
+    - PATH=$HOME/.local/bin:$PATH
 
-script:
-- make build
-- make test
-- make dist
+before_install:
+  - pip install --user awscli
+  - mkdir -p ~/$TRAVIS_BUILD_NUMBER
+  - aws s3 sync s3://docker-volume-glusterfs/$TRAVIS_BUILD_NUMBER ~/$TRAVIS_BUILD_NUMBER
+
+stages:
+- build
+- release
+  if: $TRAVIS_BRANCH =~ ^release-v[0-9]+\.[0-9]+\.[0-9]+ 
+
+jobs:
+  include:
+
+  - stage: build
+    before_script:
+      - source ./.travis/version-generator.sh
+    script: 
+      - make build
+      - make test
+      - make dist
+      - cp dist/* ~/$TRAVIS_BUILD_NUMBER/
+    after_failure:
+      - aws s3 rm --recursive s3://docker-volume-glusterfs/$TRAVIS_BUILD_NUMBER
+
+  - stage: release
+    before_script:
+      - source ./.travis/deploy-changelog.sh
+    script:
+      - deploy-changelog
+    deploy:
+      provider: releases
+      api_key: $GITHUB_TOKEN
+      file_glob: true
+      file: ~/$TRAVIS_BUILD_NUMBER/docker-volume-glusterfs-${BUILD_VERSION}-*
+      skip_cleanup: true
+      overwrite: true
+    after_script:
+      - aws s3 rm --recursive s3://docker-volume-glusterfs/$TRAVIS_BUILD_NUMBER
 
 after_success:
-- deploy-changelog
+  - aws s3 sync ~/$TRAVIS_BUILD_NUMBER s3://docker-volume-glusterfs/$TRAVIS_BUILD_NUMBER
 
-deploy:
-  provider: releases
-  api_key: $GITHUB_TOKEN
-  file_glob: true
-  file: dist/docker-volume-glusterfs-${BUILD_VERSION}-*
-  skip_cleanup: true
-  overwrite: true
-  on:
-    tags: true
-
-after_deploy:
-- echo "************* AFTER DEPLOY ***************"
+#before_script:
+#- source ./.travis/version-generator.sh
+#- source ./.travis/deploy-changelog.sh
+#
+#script:
+#- make build
+#- make test
+#- make dist
+#
+#after_success:
+#- deploy-changelog
+#
+#deploy:
+#  provider: releases
+#  api_key: $GITHUB_TOKEN
+#  file_glob: true
+#  file: dist/docker-volume-glusterfs-${BUILD_VERSION}-*
+#  skip_cleanup: true
+#  overwrite: true
+#  on:
+#    tags: true
+#
+#after_deploy:
+#- echo "************* AFTER DEPLOY ***************"
 
 notifications:
   webhooks:
