--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go: 1.10.x
 
 before_script:
   - source ./.travis/version-generator.sh
-  - source ./.travis/deploy-changelog.sh
+  - RELEASE=$BUILD_VERSION source ./.travis/deploy-changelog.sh
 
 script: 
   - make build
@@ -12,7 +12,7 @@ script:
   - make dist
 
 after_success:
-  - RELEASE=$BUILD_VERSION deploy-changelog
+  - deploy-changelog
 #  if: branch =~ \r\e\l\e\a\s\e\-\v[0-9]+\.[0-9]+\.[0-9]+
 
 
