--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,8 @@ script:
 
 after_success:
   - if [ "$RELEASE" == "YES" ]; then deploy-changelog; fi
+  on:
+    condition: $RELEASE == YES
 
 deploy:
   provider: releases
